plugins {
    id 'java'
    id 'eclipse'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

dependencies {
    implementation project(':dashj-core')
    // implementation 'com.google.protobuf:protobuf-javalite:3.17.3'
    implementation 'de.jensd:fontawesomefx:8.0.0'
    implementation 'com.google.zxing:core:3.4.1'
    implementation 'org.slf4j:slf4j-jdk14:1.7.32'
    implementation 'org.dashj:dashj-bls:0.18.1'
}

javafx {
    version = '17.0.0.1'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

tasks.withType(JavaExec).configureEach {
    systemProperty "java.library.path", "${rootProject.projectDir}/contrib/dashj-bls/bls/target/cmake"
    doFirst {
        def jfxJars = configurations.runtimeClasspath.files.findAll { it.name.contains('javafx') }
        if (jfxJars) {
            jvmArgs '--module-path', jfxJars.join(File.pathSeparator),
                    '--add-modules', 'javafx.controls,javafx.fxml'
        }
    }
}

sourceCompatibility = 1.11
compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'
javadoc.options.encoding = 'UTF-8'

mainClassName = 'wallettemplate.Main'
